feat: start ORM-ifying library